# discord-voice-echo

./: Cargo.toml  README.md
docs/: index.html
src/: bridge.rs  codec.rs  config.rs  lib.rs  main.rs
